force-app/main/default/objects/Dynacat_Attribute__c/Dynacat_Attribute__c.object-meta.xml
<CustomObject>
    <label>Attribute</label>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>