force-app/main/default/objects/Dynacat_Attribute__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <formula>IF(Root_Level__c, 0,
IF(Parent_Attribute__r.Root_Level__c, 1,
IF(Parent_Attribute__r.Parent_Attribute__r.Root_Level__c, 2,
IF(Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Root_Level__c, 3,
IF(Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Root_Level__c, 4, -1)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>