force-app/main/default/objects/Dynacat_Attribute__c/fields/Parent_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Parent_Attribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Attribute</label>
    <referenceTo>Dynacat_Attribute__c</referenceTo>
    <relationshipLabel>Attributes</relationshipLabel>
    <relationshipName>Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>