force-app/main/default/objects/Dynacat_Attribute__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <formula>IF( !ISBLANK(Parent_Attribute__c),

IF( !ISBLANK(Parent_Attribute__r.Parent_Attribute__c),

IF( !ISBLANK(Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__c),

IF( !ISBLANK(Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__c),

IF( !ISBLANK(Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__c),

Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.External_Id__c + &quot;x&quot;,
&quot;&quot;)

+ Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.External_Id__c + &quot;x&quot;,
&quot;&quot;)

+ Parent_Attribute__r.Parent_Attribute__r.Parent_Attribute__r.External_Id__c + &quot;x&quot;,
&quot;&quot;)

+ Parent_Attribute__r.Parent_Attribute__r.External_Id__c + &quot;x&quot;,
&quot;&quot;)

+ Parent_Attribute__r.External_Id__c + &quot;x&quot;,
&quot;&quot;) + External_Id__c + &quot;x&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Path</label>
    <type>Text</type>
</CustomField>