force-app/main/default/objects/Dynacat_Attribute__c/fields/Root_Level__c.field-meta.xml
<CustomField>
    <fullName>Root_Level__c</fullName>
    <formula>IF(ISBLANK(Parent_Attribute__c),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Root Level</label>
    <type>Checkbox</type>
</CustomField>