force-app/main/default/objects/Dynacat_Attribute__c/fields/Selectable__c.field-meta.xml
<CustomField>
    <fullName>Selectable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Selectable</label>
    <type>Checkbox</type>
</CustomField>