force-app/main/default/objects/Dynacat_Attribute__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Selectable__c</columns>
    <columns>Active__c</columns>
    <columns>Root_Level__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>